// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blur 1`] = `
Object {
  "element": Object {
    "children": Array [
      "",
    ],
    "props": Object {
      "className": "root",
    },
    "tag": "div",
  },
  "hasFocus": false,
  "info": Object {
    "nodes": Array [],
  },
  "selection": Object {
    "_tag": "None",
  },
}
`;

exports[`focus 1`] = `
Object {
  "element": Object {
    "children": Array [
      "",
    ],
    "props": Object {
      "className": "root",
    },
    "tag": "div",
  },
  "hasFocus": true,
  "info": Object {
    "nodes": Array [],
  },
  "selection": Object {
    "_tag": "None",
  },
}
`;
